--- a/package.json
+++ b/package.json
@@ -5,11 +5,55 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "eslint . --ext ts --ext tsx --ext js",
+    "lint:fix": "eslint . --ext ts --ext tsx --ext js --fix",
+    "type-check": "tsc --pretty --noEmit",
+    "format": "prettier --write .",
+    "test:unit": "jest",
+    "test:unit:w": "jest --watch",
+    "test:unit:cover": "jest --coverage",
+    "test:unit:cover:w": "jest --watch --coverage",
+    "test:e2e": "./node_modules/.bin/cypress run",
+    "test:e2e:open": "cypress open",
+    "test:ci": "yarn test:all && yarn test:e2e",
+    "qa": "yarn lint && yarn type-check && yarn test:unit",
+    "qa:cover": "yarn lint && yarn type-check && yarn test:unit:cover && test:e2e"
+  },
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
+      "pre-commit": "lint-staged",
+      "pre-push": "yarn qa"
+    }
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "yarn lint",
+      "yarn format"
+    ],
+    "*.{json,md}": [
+      "prettier --write"
+    ]
   },
   "dependencies": {
     "next": "10.0.9",
     "react": "17.0.2",
     "react-dom": "17.0.2"
+  },
+  "devDependencies": {
+    "@commitlint/cli": "^12.0.1",
+    "@commitlint/config-conventional": "^12.0.1",
+    "@types/node": "^14.14.37",
+    "@types/react": "^17.0.3",
+    "eslint": "^7.23.0",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-cypress": "^2.11.2",
+    "eslint-plugin-react": "^7.23.1",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "husky": "^5.2.0",
+    "lint-staged": "^10.5.4",
+    "prettier": "^2.2.1",
+    "typescript": "^4.2.3"
   }
 }
