--- a/package.json
+++ b/package.json
@@ -50,6 +50,8 @@
     "@types/node": "^14.14.37",
     "@types/react": "^17.0.3",
     "@types/testing-library__jest-dom": "^5.9.5",
+    "@typescript-eslint/eslint-plugin": "^4.19.0",
+    "@typescript-eslint/parser": "^4.19.0",
     "babel-jest": "^26.6.3",
     "cypress": "^6.8.0",
     "eslint": "^7.23.0",
