--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
   "dependencies": {
     "next": "10.0.9",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "styled-components": "^5.2.1"
   },
   "devDependencies": {
     "@commitlint/cli": "^12.0.1",
@@ -49,10 +50,12 @@
     "@types/jest": "^26.0.22",
     "@types/node": "^14.14.37",
     "@types/react": "^17.0.3",
+    "@types/styled-components": "^5.1.9",
     "@types/testing-library__jest-dom": "^5.9.5",
     "@typescript-eslint/eslint-plugin": "^4.19.0",
     "@typescript-eslint/parser": "^4.19.0",
     "babel-jest": "^26.6.3",
+    "babel-plugin-styled-components": "^1.12.0",
     "cypress": "^6.8.0",
     "eslint": "^7.23.0",
     "eslint-config-prettier": "^8.1.0",
