--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   },
   "dependencies": {
     "next": "10.0.9",
+    "ramda": "^0.27.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "styled-components": "^5.2.1"
@@ -49,6 +50,7 @@
     "@testing-library/jest-dom": "^5.11.10",
     "@types/jest": "^26.0.22",
     "@types/node": "^14.14.37",
+    "@types/ramda": "^0.27.39",
     "@types/react": "^17.0.3",
     "@types/styled-components": "^5.1.9",
     "@types/testing-library__jest-dom": "^5.9.5",
