--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,19 +15,15 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
-    "types": ["node", "jest", "@types/testing-library__jest-dom"],
-    "baseUrl": ".",
-    "paths": {
-      "src/*": ["./src/*"],
-      "aws-exports": [".src/aws-exports"],
-      "models/*": ["./models/*"],
-      "api/*": ["./src/api/*"],
-      "modules/*": ["./src/modules/*"],
-      "lib/*": ["./src/lib/*"],
-      "shared/*": ["./src/shared/*"],
-      "styles/*": ["./src/styles/*"]
-    }
+    "baseUrl": "./src",
+    "types": ["node", "jest", "@types/testing-library__jest-dom"]
   },
-  "include": ["next-env.d.ts", "src/**/*.ts", "src/**/*.tsx", "src/**/*.js"],
+  "include": [
+    "next-env.d.ts",
+    "src/**/*.ts",
+    "src/**/*.tsx",
+    "src/**/*.js",
+    "./types/*.ts"
+  ],
   "exclude": ["node_modules", ".next", "out"]
 }
