--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "ramda": "^0.27.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-icons": "^4.2.0",
     "styled-components": "^5.2.1"
   },
   "devDependencies": {
