--- a/package.json
+++ b/package.json
@@ -48,7 +48,10 @@
     "@commitlint/cli": "^12.0.1",
     "@commitlint/config-conventional": "^12.0.1",
     "@cypress/code-coverage": "^3.9.2",
+    "@testing-library/dom": "^7.30.2",
     "@testing-library/jest-dom": "^5.11.10",
+    "@testing-library/react": "^11.2.6",
+    "@testing-library/user-event": "^13.1.1",
     "@types/jest": "^26.0.22",
     "@types/node": "^14.14.37",
     "@types/ramda": "^0.27.39",
